--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-503.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-413.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-327.9KB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 4a3ad34e-a12c-4e72-8fcb-47accba9e218, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
-  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-428.9KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.43MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-555.1KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-287.8KB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇺🇸 美国-663.6KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-719.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.37MB/s(Youtube:不良林), server: 116.129.254.65, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
-  - {name: 塞浦路斯-451.4KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: caca1a4b-0a20-4a66-85d2-08b02c1afb02, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-707.2KB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇺🇸 美国-4.91MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 🇷🇺 俄罗斯联邦-533.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇫🇷 法国-1.62MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-2.49MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-287.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-663.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-719.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 塞浦路斯-451.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-707.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-533.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-287.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-663.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-719.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 塞浦路斯-451.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-707.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-533.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-287.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-663.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-719.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 塞浦路斯-451.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-707.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-533.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-287.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-663.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-719.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 塞浦路斯-451.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-707.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-533.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-287.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-663.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-719.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 塞浦路斯-451.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-707.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-533.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-287.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-663.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-719.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 塞浦路斯-451.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-707.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-533.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-287.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-663.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-719.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 塞浦路斯-451.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-707.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-533.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
