--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.30MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-329.3KB/s(Youtube:不良林), server: 112.64.98.133, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 112.64.98.133}}
-  - {name: 🇫🇷 法国-2.01MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇨🇳 中国-172.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-352.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-2.77MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-523.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇩🇪 德国-2.26MB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇫🇷 法国-2.01MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇫🇷 法国-1.05MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-329.3KB/s(Youtube:不良林), server: 112.64.98.133, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 112.64.98.133}}
+  - {name: 🇨🇦 加拿大-1.92MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-5.55MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-usa3-242, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
   - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.05MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-813.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-172.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-523.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-172.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-523.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-172.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-523.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-172.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-523.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-172.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-523.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-172.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-523.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-172.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-523.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
